--- a/intro.Rmd
+++ b/intro.Rmd
@@ -1,9 +1,8 @@
----
-output:
-  html_document: default
-  pdf_document: default
----
-# Introduction {#intro}
+```{r include = FALSE}
+source("_common.R")
+```
+
+# Preface {#intro}
 
 Music is an exciting art form and cultural activity that allows you to turn sound into expressions of emotion. The goal of "The Musician's Compendium" is to help you learn the most important aspects of music theory, performance, and recording that will allow you to be an accomplished musician. After reading this book you will have the knowledge to appreciate, understand, and create music in a variety of styles, using what you have learned to express yourself and bring people together.
 
@@ -95,37 +94,52 @@ You also need to choose between a monophonic or polyphonic instrument. **Monopho
 
 ## Acknowledgments
 
-```{r}
-embed_audio <- function(src, type = "audio/mpeg") {
-  if (knitr::is_html_output()) {
-    sprintf("<audio controls>
-               <source src='audio/%s' type='%s'>
-             Your browser does not support the audio element.
-            </audio>", src, type)
-  } else print("")
-}
-```
-
-`r embed_audio("Clair De Lune.mp3")`
-<!-- embed html audio
-<audio controls>
-  <source src="audio/Clair De Lune.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-end html audio chunk -->
-
 This book was written in the open, and many people contributed pull requests to fix minor problems. Special thanks goes to everyone who contributed via GitHub: 
 
-```{r contribs, results = "asis", echo = FALSE, message = FALSE}
+```{r, eval = FALSE, echo = FALSE}
+# code taken from: https://github.com/hadley/mastering-shiny/blob/master/introduction.Rmd
+library(tidyverse)
+contribs_all_json <- gh::gh("/repos/:owner/:repo/contributors",
+  owner = "mccarthy-m-g",
+  repo = "musicians-compendium",
+  .limit = Inf
+)
+contribs_all <- tibble(
+  login = contribs_all_json %>% map_chr("login"),
+  n = contribs_all_json %>% map_int("contributions")
+)
+contribs_old <- read_csv("contributors.csv", col_types = list())
+contribs_new <- contribs_all %>% anti_join(contribs_old, by = "login")
+# Get info for new contributors
+needed_json <- map(
+  contribs_new$login, 
+  ~ gh::gh("/users/:username", username = .x)
+)
+info_new <- tibble(
+  login = contribs_new$login,
+  name = map_chr(needed_json, "name", .default = NA),
+  blog = map_chr(needed_json, "blog", .default = NA)
+)
+info_old <- contribs_old %>% select(login, name, blog)
+info_all <- bind_rows(info_old, info_new)
+contribs_all <- contribs_all %>% 
+  left_join(info_all, by = "login") %>% 
+  arrange(login)
+write_csv(contribs_all, "contributors.csv")
+```
+
+```{r, results = "asis", echo = FALSE, message = FALSE}
+# code taken from: https://github.com/hadley/mastering-shiny/blob/master/introduction.Rmd
 library(dplyr)
-# git --no-pager shortlog -ns > contribs.txt
-contribs <- readr::read_tsv("contribs.txt", col_names = c("n", "name"))
-contribs <- contribs %>% 
-  filter(!name %in% c("mccarthy-m-g", "Michael McCarthy")) %>% 
-  arrange(name) %>% 
-  mutate(uname = ifelse(!grepl(" ", name), paste0("@", name), name))
-cat("Thanks go to all contributers in alphabetical order: ")
-cat(paste0(contribs$uname, collapse = ", "))
+contributors <- read.csv("contributors.csv", stringsAsFactors = FALSE)
+contributors <- contributors %>% 
+  filter(login != "mccarthy-m-g") %>% 
+  mutate(
+    login = paste0("\\@", login),
+    desc = ifelse(is.na(name), login, paste0(name, " (", login, ")"))
+  )
+cat("A big thank you to all ", nrow(contributors), " people who contributed specific improvements via GitHub pull requests (in alphabetical order by username): ", sep = "")
+cat(paste0(contributors$desc, collapse = ", "))
 cat(".\n")
 ```
 
@@ -135,6 +149,32 @@ An online version of this book is available at https://. The source of the book 
 
 This book was built with:
 
-```{r session-info}
-sessioninfo::session_info(c("bookdown", "tidyverse", "DiagrammeR", "tabr"))
+```{r, echo = FALSE, results="asis"}
+# code taken from: https://github.com/hadley/mastering-shiny/blob/master/introduction.Rmd
+deps <- desc::desc_get_deps()
+pkgs <- sort(deps$package[deps$type == "Imports"])
+pkgs <- sessioninfo::package_info(pkgs, dependencies = FALSE)
+df <- tibble(
+  package = pkgs$package,
+  version = pkgs$ondiskversion,
+  source = gsub("@", "\\\\@", pkgs$source)
+)
+knitr::kable(df, format = "markdown")
+```
+
+```{r, echo = FALSE}
+# code taken from: https://github.com/hadley/mastering-shiny/blob/master/introduction.Rmd
+ruler <- function(width = getOption("width")) {
+  x <- seq_len(width)
+  y <- dplyr::case_when(
+    x %% 10 == 0 ~ as.character((x %/% 10) %% 10),
+    x %% 5 == 0  ~ "+",
+    TRUE         ~ "-"
+  )
+  cat(y, "\n", sep = "")
+  cat(x %% 10, "\n", sep = "")
+}
+```
+```{r, include = FALSE}
+ruler()
 ```
