add link to personal site on my author name

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
 title: "The Musician's Compendium"
-author: "Michael McCarthy"
+author: "[Michael McCarthy](https://michaelmccarthy.netlify.com)"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 output: bookdown::gitbook
