--- a/intro.Rmd
+++ b/intro.Rmd
@@ -1,7 +1,3 @@
-```{r include = FALSE}
-source("_common.R")
-```
-
 # Preface {#intro}
 
 Music is an exciting art form and cultural activity that allows you to turn sound into expressions of emotion. The goal of "The Musician's Compendium" is to help you learn the most important aspects of music theory, performance, and recording that will allow you to be an accomplished musician. After reading this book you will have the knowledge to appreciate, understand, and create music in a variety of styles, using what you have learned to express yourself and bring people together.
@@ -10,12 +6,12 @@ Music is an exciting art form and cultural activity that allows you to turn soun
 
 Music is a huge field, and there's no way you can master it by reading a single book. The goal of this book is to give you a solid foundation in music theory, performance, and recording that will help you begin (or continue) your journey to mastery. The basic model of the steps needed to become an accomplished musician looks something like this:
 
-```{r mastery-steps, echo=FALSE, fig.align='center', fig.asp=2, fig.cap="A basic model of the steps needed to become an accomplished musician.", fig.height=2, fig.width=6, out.width="100%"}
+```{r mastery-steps, fig.align='center', fig.asp=2, fig.cap="A basic model of the steps needed to become an accomplished musician.", fig.height=2, fig.width=6, out.width="100%"}
 # create diagram --------------------------------------------------------------
 
-### this has weird output in the pdf version...
+### this has weird output in the pdf version and seems to break the latex code in the pdf version
 
-DiagrammeR::grViz("digraph {
+mastery_steps <- DiagrammeR::grViz("digraph {
 
     graph [layout = dot, overlap = false]
     
@@ -33,6 +29,13 @@ DiagrammeR::grViz("digraph {
     {rank=same ; c -> b [dir = both, minlen = 4]};
     }", 
   height = 200)
+
+ rsvg::rsvg_png(
+      charToRaw(DiagrammeRsvg::export_svg(mastery_steps)),
+      file = "figures/mastery-steps.png"
+    )
+
+knitr::include_graphics("figures/mastery-steps.png")
 ```
 
 First you should **study** music. This typically means learning music theory, analyzing compositions, actively listening to songs you enjoy, and so forth. You can study music alone by using textbooks or online resources (such as this book), or with others by taking classes or private lessons. The purpose of studying music is to 
@@ -94,7 +97,7 @@ You also need to choose between a monophonic or polyphonic instrument. **Monopho
 
 ## Acknowledgments
 
-```{r, eval = FALSE, echo = FALSE}
+```{r, eval = FALSE}
 # code taken from: https://github.com/hadley/mastering-shiny/blob/master/introduction.Rmd
 library(tidyverse)
 contribs_all_json <- gh::gh("/repos/:owner/:repo/contributors",
@@ -126,7 +129,7 @@ contribs_all <- contribs_all %>%
 write_csv(contribs_all, "contributors.csv")
 ```
 
-```{r, results = "asis", echo = FALSE, message = FALSE}
+```{r, results = "asis", message = FALSE}
 # code taken from: https://github.com/hadley/mastering-shiny/blob/master/introduction.Rmd
 library(dplyr)
 contributors <- read.csv("contributors.csv", stringsAsFactors = FALSE)
@@ -147,7 +150,7 @@ This book was written in [RStudio](http://www.rstudio.com/ide/) using [bookdown]
 
 This version of the book was built with `r R.version.string` and the following packages:
 
-```{r, echo = FALSE, results="asis"}
+```{r, results="asis"}
 # code taken from: https://github.com/hadley/mastering-shiny/blob/master/introduction.Rmd
 deps <- desc::desc_get_deps()
 pkgs <- sort(deps$package[deps$type == "Imports"])
@@ -160,7 +163,7 @@ df <- tibble(
 knitr::kable(df, format = "markdown")
 ```
 
-```{r, echo = FALSE}
+```{r,}
 # code taken from: https://github.com/hadley/mastering-shiny/blob/master/introduction.Rmd
 ruler <- function(width = getOption("width")) {
   x <- seq_len(width)
