--- a/contribute.Rmd
+++ b/contribute.Rmd
@@ -4,20 +4,20 @@ This book has been developed in the open, and it wouldn't be nearly as good
 without your contributions. There are a number of ways you can help make the
 book even better:
 
-* If you don't understand something, please 
+- If you don't understand something, please 
   [let me know](mailto:m.mccarthy1624@gmail.com). Your feedback on what is confusing
   or hard to understand is valuable.
 
-* If you spot a typo, feel free to edit the underlying page and send a pull 
+- If you spot a typo, feel free to edit the underlying page and send a pull 
   request. If you've never done this before, the process is very easy: 
   
-    * Click the edit this page on the sidebar.
+    1. Click the edit this page on the sidebar.
   
-    * Make the changes using github's in-page editor and save.
+    2. Make the changes using github's in-page editor and save.
     
-    * Submit a pull request and include a brief description of your changes.
+    3. Submit a pull request and include a brief description of your changes.
       "Fixing typos" is perfectly adequate.
       
-    * If you make significant changes, include the phrase "I assign the 
-      copyright of this contribution to Michael McCarthy" - I need this so I can 
-      publish the printed book.
+- If you make significant changes, include the phrase "I assign the copyright of this contribution to Michael McCarthy"---I need this so I can publish print versions of the book.
+
+- If you are contributing your own music to the book, please include the phrase “I grant a non-revocable non-exclusive license of the musical works in this contribution to Michael McCarthy.”
