--- a/intro.Rmd
+++ b/intro.Rmd
@@ -1,5 +1,7 @@
 # Preface {#intro}
 
+>"Music is in the air; it's my job to pull it out." - Jaco Pastorius
+
 Music is an exciting art form and cultural activity that allows you to turn sound into expressions of emotion. The goal of "The Musician's Compendium" is to help you learn the most important aspects of music theory, performance, and recording that will allow you to be an accomplished musician. After reading this book you will have the knowledge to appreciate, understand, and create music in a variety of styles, using what you have learned to express yourself and bring people together.
 
 ## What you will learn
@@ -90,6 +92,16 @@ There are X things you need to get the most out of this book.
 Whether it's a piano, guitar, or your voice, you will need a pitched instrument to learn and practice with. Pitched instruments include everything but drums (for the most part). If there is a music store in your area it should be easy to find a good-quality instrument for a reasonable price if you do not have one. We do not recommend purchasing an instrument online as instruments of the same make and model can vary in quality, so it's best to try before you buy.
 
 You also need to choose between a monophonic or polyphonic instrument. **Monophonic** instruments can only play one sound at a time. Your voice, a saxophone, and a flute are all monophonic instruments. **Polyphonic** instruments can play multiple sounds at a time. A guitar, piano, or harp are all polyphonic instruments. This book covers material that applies to monophonic and polyphonic instruments.
+
+### Hearing protection
+
+If you will be exposed to loud sounds while playing music---whether from an amplified instrument or acoustic drums---you should be wearing hearing protection. Failure to do so can result in permanent hearing loss or tinnitus [@davies_AudiometryOtherHearing_2016].
+
+### Metronome
+
+### Tuner
+
+Your instrument should always be in-tune when you play it.
 
 ## Getting help and learning more
 
