--- a/performance.Rmd
+++ b/performance.Rmd
@@ -2,4 +2,8 @@
 
 # Introduction {#performance-intro}
 
+>"Play as much as you can as often as you can with as many people as you can. That's how you learn and grow." - Les Claypool
+
+>"I believe every guitar player inherently has something unique about their playing. They just have to identify what makes them different and develop it." - Jimmy Page
+
 The goal of the second part of this book is to give you a broad overview of **music performance**.
